--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     margin: 0px;
     padding: 0;
-    color: rgb(0, 0, 0);
     background-color: #ffffff;
     font-family: 'Roboto Slab', serif;
     font-size: 1em;
@@ -24,8 +23,8 @@ h1 {
 }
 
 .container > * {
-    padding: 5px;
-    border: 1px solid 
+    padding: 1px;
+
 }
 
 .header {
@@ -40,8 +39,6 @@ h1 {
     grid-area: navbar;
 }
   
-
-
 .footer {
     grid-area: footer;
 }
@@ -97,23 +94,23 @@ h1 {
         margin-left: 300px;
     }
 
-
-
 }
 
-   
-   
+  
 .navbar ul li {
-        margin-right: 10px;
-        color: rgb(50, 84, 124);
+        margin-right: 15px;
+        color: rgb(42, 18, 97);
         font-size: 15px;
         font-family: 'Roboto Mono', monospace;
         text-transform: uppercase;
-  
+        margin-left: 40px;
         }
 
 .navbar{
     background-color:rgb(169, 241, 223);
+    width: 100%;
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+    
     }
 
 .navbar li:hover{
@@ -123,13 +120,15 @@ h1 {
 
 
 .navbar h1{
-
+    margin-top: 10px;
+    margin-left: 10px;
     font-size: 40px;
-    font-family: 'Caveat', cursive;
-    color:rgb(159, 180, 255);
+    font-family: 'Lexend Deca', sans-serif;
+    color:rgb(250, 251, 252);
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
     
-}
 
+}
 
 
 .grid-container {
@@ -137,28 +136,37 @@ h1 {
     grid-template-columns: repeat(auto-fit,minmax(370px, 1fr));
     grid-auto-rows: minmax(250px, auto);
     padding: 10px;
-    justify-content: ;
+    justify-items: center;
+    margin-top: 30px;
  
 }
 
-
-.grid-item{
-display: flex;
-align-items: center;
-justify-content: 65px;
-
+  .grid-item{
+  display: flex;
+  align-items: center;
+  justify-content: 65px;
+  border-radius: 5%;
+ 
 }
-
 
 .grid-video{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(370px, 1fr));
-    grid-auto-rows: minmax(250px, auto);
-    padding: 10px;
+    grid-template-columns: repeat(auto-fit,minmax(400px, 1fr));
+    grid-auto-rows: minmax(300px, auto);
+    padding: 20px;
+    margin-left: 90px;
+   
 }
 
-
-
+.auto{
+    border-radius: 5px;
+}
+.videos{
+    border-radius: 5px;
+}
+.playa{
+    border-radius: 5px;
+}
 .contenedoruno{
     display: flex;
     height: 80px;
@@ -181,8 +189,8 @@ justify-content: 65px;
     background-color: rgb(255, 255, 255);
     padding: 30px;
     text-align: center;
-    font-family: 'Caveat', cursive;
-    font-size: 30px; 
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 20px; 
     line-height: 10px; 
     margin: 40px;
     margin-top: 20px;
@@ -192,32 +200,7 @@ justify-content: 65px;
    }
    
 
-   .imagenuno{
-    min-width: 900px;
-    margin-left: 80px;
-    padding: 90px;
-    padding-bottom: 20px;
-    
-}
 
-.imagenunoauto{
-   width: 100%;
-   margin-left: 50px;
-   margin-right: 30px;
-   height: auto;
-}
-
-.video{
-
-margin-left: 10px;
-margin-right: 10px;
-}
-
-.imagenunoplaya{
-    width: 100%;
-    height: auto;
-
-}
 .footer{
     width: 100%;
     padding: 50px 0;
@@ -230,12 +213,11 @@ flex-wrap: wrap;
 justify-content: space-around;
 max-width: 1200px;
 margin: auto;
-margin-top: 20px;
 margin-bottom: 20px;
 background-color:rgb(164, 236, 161); 
 font-family: 'Roboto Mono', monospace;
 color: rgb(36, 70, 133);
-padding: 20px;
+padding: 15px;
 
 }
 
@@ -254,6 +236,7 @@ padding: 20px;
     padding: 80px;
     margin: 70px;
     border:20px;
+    border-radius: 10px;
     
 }
 
@@ -261,23 +244,24 @@ padding: 20px;
     object-fit: cover;
     padding: 80px;
     margin: 70px;
-    border:20px
-    
+    border:20px;
+    border-radius: 10px;
 }
 
 .poolside{
     object-fit: cover;
     padding: 80px;
     margin: 70px;
-    border:20px
+    border:20px;
+    border-radius: 10px;
 }
 
 .waves{
     object-fit: cover;
     padding: 80px;
     margin: 70px;
-    border:20px
-    
+    border:20px;
+    border-radius: 10px;
 }
 
 .arquitectura{
@@ -285,7 +269,8 @@ padding: 20px;
     object-fit: cover;
     padding: 80px;
     margin: 70px;
-    border:20px
+    border:20px;
+    border-radius: 10px;
     
 }
 
@@ -294,12 +279,10 @@ padding: 20px;
     object-fit: cover;
     padding: 80px;
     margin: 70px;
-    border:20px
+    border:20px;
+    border-radius: 10px;
 
 }
-
-
-
 
 
 
